--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.13.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
+    "joi-browser": "^13.4.0",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
